--- a/style.css
+++ b/style.css
@@ -1,12 +1,14 @@
 /* CSS Index */
 .header{
-    background-color: #f5f578;
+    background-color: lightyellow;
     color: black;
     font-weight: 80;
 }
-title_principal
+.title_principal{
+    font-size: 60px;
+}
 .sobreNosotros{
-    background-color: rgba(219,255,65,1) ;
+    background-color: rgb(248, 248, 184) ;
     padding: 3em 2em;
 }
 .titulo_sobreNosotros{
@@ -16,8 +18,8 @@ title_principal
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
 }
 footer {
-    background-color: #fa6f34;
-    color: rgb(0, 0, 0);
+    background-color: #7c7c7c;
+    color: rgb(3, 3, 3);
     padding: 20px;
     text-align: center;
   }
@@ -55,13 +57,12 @@ footer {
 
   /* CSS login */
 body {
-    height: 100vh;
     font-family: Arial, sans-serif;
-    background: rgb(254,255,0);
-    background: linear-gradient(177deg, rgba(254,255,0,1) 0%, rgba(219,255,65,1) 50%, rgba(255,111,0,1) 100%);
+    background: rgb(255,255,130);
+    background: linear-gradient(147deg, rgba(255,255,130,1) 0%, rgba(255,229,111,0.9500175070028011) 50%, rgba(170,163,158,1) 100%);
 }   
 .container{
-    margin:80px auto 150 auto ;
+    margin: 20vh auto;
 }
 .container_principal {
     padding: 20px;
@@ -77,7 +78,7 @@ body {
 }
 .card {
     margin-top: 20px;
-    background-color: rgba(219,255,65,1) ;
+    background-color: #bfff92;
 }
 .icon {
     color: #ff3700;
@@ -95,6 +96,7 @@ body {
         max-width: 400px;
         margin: 0 auto;
     }
+    
 }
 
 
