--- a/estiloshome.css
+++ b/estiloshome.css
@@ -1,10 +1,12 @@
 *{
     box-sizing: border-box;
+    
 }
 
 body{
     background: rgb(255,255,130);
     background: linear-gradient(147deg, rgba(255,255,130,1) 0%, rgba(255,229,111,0.9500175070028011) 50%, rgba(170,163,158,1) 100%);
+    
 }
 
 .busqueda{
@@ -26,13 +28,64 @@ body{
 .inventario{
     display: grid;
     gap: 1rem;
-    grid-auto-rows: 22rem;
-    grid-template-columns: repeat(auto-fill, minmax(25rem, 1fr));
-    margin: 1rem;
+    grid-auto-rows: 28rem;
+    grid-template-columns: repeat(auto-fill, minmax(22rem, 1fr));
+    margin: 1em;
 }
 .inventario div{
     text-align: center;
+    border: 1px solid black;
+    border-radius: 7px;
+    -webkit-box-shadow: 6px 6px 12px 0px rgba(56,54,56,1);
+    -moz-box-shadow: 6px 6px 12px 0px rgba(56,54,56,1);
+    box-shadow: 6px 6px 12px 0px rgba(56,54,56,1);
 }
 .inventario p{
     margin: 1rem;
+}
+.inventario button{
+    margin: 1rem;
+    border-radius: 4px;
+    border-color: black;
+    background-color: lightgrey;
+    font-weight: bold;
+}
+#carrito{
+    border: 1px solid grey;
+    border-radius: 4px;
+    margin: 1em;
+    padding: 1em;
+    -webkit-box-shadow: 6px 6px 12px 0px rgba(56,54,56,1);
+    -moz-box-shadow: 6px 6px 12px 0px rgba(56,54,56,1);
+    box-shadow: 6px 6px 12px 0px rgba(56,54,56,1);
+}
+
+
+.boton{
+    width: 9em;
+    height: 3em;
+    border-radius: 20em;
+    font-size: 18px;
+    font-family: inherit;
+    border: none;
+    position: relative;
+    overflow: hidden;
+    z-index: 1;
+    box-shadow: 6px 6px 12px #9f9d9d, -3px -3px 5px #fffeb8;
+}
+.boton::before{
+    content: '';
+    width: 0;
+    height: 3em;
+    border-radius: 20em;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-image: linear-gradient(to right, #63f05b 0%, #bfbead 100%);
+    transition: .5s ease;
+    display: block;
+    z-index: -1;
+}
+.boton:hover:before{
+    width: 9em;
 }
