--- a/ecommerce/src/components/principal/styloPrincipal.css
+++ b/ecommerce/src/components/principal/styloPrincipal.css
@@ -26,19 +26,26 @@ body{
     -moz-box-shadow: 4px 3px 20px 0px rgba(71, 71, 71, 0.76);
 }
 div .productos{
-    display: grid ;
-    gap: 1rem;
-    grid-auto-rows: 21rem;
-    grid-template-columns: repeat(auto-fill, minmax(18rem, 1fr));
-    margin: 1em;
-    text-align: center;
-    border-radius: 7px;
-    background-color: rgb(209, 208, 208);
+    display: grid !important;
+    gap: 1rem!important;
+    grid-auto-rows: 13rem!important;
+    grid-template-columns: repeat(auto-fill, minmax(18rem, 1fr))!important;
+    margin: 1em!important;
+    text-align: center!important;
+    border-radius: 7px!important;
+    background-color: rgb(209, 208, 208)!important;
 }
+
 div .card{
     border: 1px solid black;
     display: block;
     padding-top: 1em;
+    box-shadow: 3px 3px 9px 4px black;
+    transition: transform 0.3s ease;
+}
+
+div .card:hover{
+    transform: scale(1.1);
 }
 
 .productos p{
@@ -73,8 +80,8 @@ div .card{
     border-radius: 28px;
     border: none;
 }
-.productos img{
-    width: 60%;
-    height: 50%;
-    justify-content: center;
+.cards{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
