--- a/ecommerce/src/components/principal/styloPrincipal.css
+++ b/ecommerce/src/components/principal/styloPrincipal.css
@@ -9,36 +9,9 @@ body{
     background: linear-gradient(147deg, rgba(255,255,130,1) 0%, rgba(255,229,111,0.9500175070028011) 50%, rgba(170,163,158,1) 100%);
 }
 
-.busqueda{
-    padding: 2rem;
-}
-.busqueda h2{
-    margin: 0.5em;
-}
-.busqueda input{
-    width: 60%;
-    border: 3px solid gray;
-    border-radius: 4px;
-    padding: 0.5em;
-    margin-top: 1rem;
-    box-shadow: 4px 3px 20px 0px rgba(138,138,138,0.76);
-    -webkit-box-shadow: 4px 3px 20px 0px rgba(102, 102, 102, 0.76);
-    -moz-box-shadow: 4px 3px 20px 0px rgba(71, 71, 71, 0.76);
-}
-div .productos{
-    display: grid !important;
-    gap: 1rem!important;
-    grid-auto-rows: 13rem!important;
-    grid-template-columns: repeat(auto-fill, minmax(18rem, 1fr))!important;
-    margin: 1em!important;
-    text-align: center!important;
-    border-radius: 7px!important;
-    background-color: rgb(209, 208, 208)!important;
-}
-
 div .card{
     border: 1px solid black;
-    display: block;
+    display: flex;
     padding-top: 1em;
     box-shadow: 3px 3px 9px 4px black;
     transition: transform 0.3s ease;
@@ -48,40 +21,22 @@ div .card:hover{
     transform: scale(1.1);
 }
 
-.productos p{
-    margin: 0.5rem;
-}
-.boton_compra{ 
-    font-family: Georgia;
-    color: #000000;
-    font-size: 1em;
-    padding: 5px;
-    margin: 0.5rem;
-    text-decoration: none;
-    -webkit-border-radius: 28px;
-    -moz-border-radius: 28px;
-    border-radius: 28px;
-    -webkit-box-shadow: 0px 1px 3px #bbb3b3;
-    -moz-box-shadow: 0px 1px 3px #949494;
-    box-shadow: 0px 1px 3px #949494;
-    text-shadow: 1px 1px 3px #858185;
-    border: solid #999999 2px;
-    background: -webkit-gradient(linear, 0 0, 0 100%, from(#575757), to(#58d6a6));
-    background: -moz-linear-gradient(top, #575757, #58d6a6);
-}
-.boton_compra:hover {
-    background: #cacaca;
-  }
-.boton_precio{ 
-    font-family: Georgia;
-    color: #000000;
-    font-size: 1em;
-    padding: 5px;
-    border-radius: 28px;
-    border: none;
-}
-.cards{
+.card-body{
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+}
+.card-text{
+    align-items: center;
+}
+.btn{ 
+    font-family: Georgia;
+    color: #000000;
+    font-size: 1em;
+    padding: 5px;
+    margin-bottom: 0.5rem;
+    text-decoration: none;
+}
+.btn:hover {
+    background: #dbdbaf;
 }
